--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <a href="mailto:ridercar@gmail.com" class="text-list_item--link">Ridercar@gmail.com</a>
                    </li>
                    <div class="store_list-button">
-                    <a href="#" class="store_list-button-link">Danh Sách Các Cửa Hàng</a>
+                    <a href="https://vantuan49.github.io/ridercar_danhsachcuahang/" class="store_list-button-link">Danh Sách Các Cửa Hàng</a>
                    </div>
                    <div class="social-contact">
                     <ul class="social-contact_list">
